--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -14,7 +14,6 @@
   }
 
   img {
-    max-width: 200px;
     border-radius: 50%;
   }
 
